Added mobile responsiveness. Image with purple not completed.

--- a/index.html
+++ b/index.html
@@ -26,15 +26,43 @@
     </style>
   </head>
   <body>
-    Get insights that help your business grow. Discover the benefits of data
-    analytics and make better decisions regarding revenue, customer experience,
-    and overall efficiency. 10k+ companies 314 templates 12m+ queries
+    <div class="container">
+      <div class="img-heading">
+        <img src="/images/image-header-mobile.jpg" class="img" />
+      </div>
 
-    <div class="attribution">
+      <div class="container-heading">
+        <h1>Get <span>insights</span> that help your business grow.</h1>
+      </div>
+      <div class="container-subheading">
+        <p>
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue, customer experience, and overall efficiency.
+        </p>
+      </div>
+      <div class="container-footer">
+        <ul>
+          <li>
+            <h2 class="footer-heading">10k+</h2>
+            <p class="footer-subheading">companies</p>
+          </li>
+          <li>
+            <h2 class="footer-heading">314</h2>
+            <p class="footer-subheading">templates</p>
+          </li>
+          <li>
+            <h2 class="footer-heading">12m+</h2>
+            <p class="footer-subheading">queries</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Christopher II</a>.
-    </div>
+    </div> -->
   </body>
 </html>
