Added image bg color.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <div class="container">
       <div class="img-heading">
-        <img src="/images/image-header-mobile.jpg" class="img" />
+        <div class="img"></div>
       </div>
 
       <div class="container-heading">
@@ -51,7 +51,7 @@
             <p class="footer-subheading">templates</p>
           </li>
           <li>
-            <h2 class="footer-heading">12m+</h2>
+            <h2 class="footer-heading">12M+</h2>
             <p class="footer-subheading">queries</p>
           </li>
         </ul>
