--- a/index.html
+++ b/index.html
@@ -27,34 +27,42 @@
   </head>
   <body>
     <div class="container">
+      <!-- parent -->
       <div class="img-heading">
         <div class="img"></div>
       </div>
 
-      <div class="container-heading">
-        <h1>Get <span>insights</span> that help your business grow.</h1>
-      </div>
-      <div class="container-subheading">
-        <p>
-          Discover the benefits of data analytics and make better decisions
-          regarding revenue, customer experience, and overall efficiency.
-        </p>
-      </div>
-      <div class="container-footer">
-        <ul>
-          <li>
-            <h2 class="footer-heading">10k+</h2>
-            <p class="footer-subheading">companies</p>
-          </li>
-          <li>
-            <h2 class="footer-heading">314</h2>
-            <p class="footer-subheading">templates</p>
-          </li>
-          <li>
-            <h2 class="footer-heading">12M+</h2>
-            <p class="footer-subheading">queries</p>
-          </li>
-        </ul>
+      <div class="card-container">
+        <!-- parent -->
+        <div class="container-heading">
+          <h1>Get <span>insights</span> that help your business grow.</h1>
+        </div>
+
+        <!-- parent -->
+        <div class="container-subheading">
+          <p>
+            Discover the benefits of data analytics and make better decisions
+            regarding revenue, customer experience, and overall efficiency.
+          </p>
+        </div>
+
+        <!-- parent -->
+        <div class="container-footer">
+          <ul>
+            <li>
+              <h2 class="footer-heading">10k+</h2>
+              <p class="footer-subheading">companies</p>
+            </li>
+            <li>
+              <h2 class="footer-heading">314</h2>
+              <p class="footer-subheading">templates</p>
+            </li>
+            <li>
+              <h2 class="footer-heading">12M+</h2>
+              <p class="footer-subheading">queries</p>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
