--- a/index.html
+++ b/index.html
@@ -5,72 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-    <link rel="stylesheet" href="index.css" />
-
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
+    <link rel="stylesheet" href="./index.css"/>
     <title>Frontend Mentor | Stats preview card component</title>
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <div class="container">
-      <!-- parent -->
-      <div class="img-heading">
-        <div class="img"></div>
-      </div>
 
-      <div class="card-container">
-        <!-- parent -->
-        <div class="container-heading">
-          <h1>Get <span>insights</span> that help your business grow.</h1>
-        </div>
-
-        <!-- parent -->
-        <div class="container-subheading">
-          <p>
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency.
-          </p>
-        </div>
-
-        <!-- parent -->
-        <div class="container-footer">
-          <ul>
-            <li>
-              <h2 class="footer-heading">10k+</h2>
-              <p class="footer-subheading">companies</p>
-            </li>
-            <li>
-              <h2 class="footer-heading">314</h2>
-              <p class="footer-subheading">templates</p>
-            </li>
-            <li>
-              <h2 class="footer-heading">12M+</h2>
-              <p class="footer-subheading">queries</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Christopher II</a>.
-    </div> -->
   </body>
 </html>
