--- a/index.html
+++ b/index.html
@@ -10,6 +10,53 @@
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
   <body>
+    <main class="main">
+      <section class="card">
+       <div class="card-picture-container">
+        <picture>
+          <source srcset="./images/image-header-desktop.jpg" media="(min-width: 1440px)">
+          <img src="./images/image-header-mobile.jpg" alt="A picture of people working together">
+        </picture>
+       </div>
+       <div class="card-content">
+        <div class="card-header">
+          <h1 class="card-title main-header">Get <em>insights</em> that help your business grow.</h1>
+          <p class="card-description main-p">Discover the benefits of data analytics and make better decisiions regarding revenu, customer exprience, and overall efficiency.</p>
+        </div>
+        <div class="card-features">
+          <div class="card-feature">
+            <span class="card-feature-header main-header">10k+</span>
+            <span class="card-feature-description feature-description">companies</span>
+          </div>
+          <div class="card-feature">
+            <span class="card-feature-header main-header">314</span>
+            <span class="card-feature-description feature-description">templates</span>
+          </div>
+          <div class="card-feature">
+            <span class="card-feature-header main-header">12M+</span>
+            <span class="card-feature-description feature-description">queries</span>
+          </div>
+        </div>
+       </div>
+      </section>
+    </main>
 
+    <footer class="attribution">
+      <a class="fem" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Challenge by Frontend Mentor</a>. 
+      <section class="my-links">
+        <a href="https://www.twitter.com/PaidChristopher" class="my-name">&copy; Coded by Christopher II</a>
+        <ul class="links">
+          <li>
+            <a href="https://www.twitter.com/PaidChristopher" target="_blank">Twitter</a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/devchristopherii" target="_blank">Instagram</a>
+          </li>
+          <li>
+            <a href="https://medium.com/@christopherii_" target="_blank">Medium</a>
+          </li>
+        </ul>
+      </section>
+    </footer>
   </body>
 </html>
